apps/on-prem/user-apps/mealie/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mealie
  namespace: mealie
  labels:
    app: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  serviceName: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:v3.26.0@sha256:a4d12ab3a009832cc94058345e22aea831c3e992e94783fefc1cd5a08544fe0c
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 23m
            memory: 500M
        ports:
        - containerPort: 9000
          protocol: TCP
        volumeMounts:
        - mountPath: /app/data
          name: mealie-volume
      volumes:
      - name: mealie-volume
        persistentVolumeClaim:
          claimName: mealie-data-pvc
