apps/on-prem/user-apps/mealie/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie-httproute
  namespace: mealie
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - mealie.binarybraids.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - kind: Service
        name: mealie-service
        namespace: mealie
        port: 9000
